base/src/test/resources/failure/struct/field-type-mismatch.aya.txt
In file $FILE:12:30 ->

  10 | 
  11 | def test-nat-pair : Pair Nat Nat =>
  12 |   new Pair Nat Nat { | fst => make-pair Nat Nat zero zero | snd => suc zero }
                                     ^-------------------------^

Error: Cannot check the expression
         make-pair Nat Nat zero zero
       of type
         Pair Nat Nat
       against the type
         Nat

1 error(s), 0 warning(s).
What are you doing?
